--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 :root {
-    all: unset;
     font-family: 'Poppins', sans-serif;
 }
 
