--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -11,12 +11,16 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
+    margin-top: 8px;
 }
 
-.name {
-    font-size: 32px;
-    font-weight: 600;
+.name img{
+    width: 100px;
+    height: 55px;
+    object-fit: cover;
+    object-position: top;
     cursor: pointer;
+    margin-top: -10px;
 }
 
 .navigation {
