Fixing some design issues

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -12,6 +12,14 @@
     align-items: center;
 }
 
+
+@media (max-width: 768px) {
+    .aboutMe, .photo {
+        animation: fadeInUp 1s ease-out forwards;
+    }
+}
+
+
 .aboutMe h2{
     font-size: 2rem;
     font-weight: 540;
