--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -48,20 +48,68 @@
 }
 
 @media (max-width: 768px) {
+    .root {
+        max-width: 768px;
+    }
     .hr {
         margin-bottom: 10px;
     }
     .container {
-        max-width: 90%;
+        max-width: 80%;
+        margin-top: 10px;
     }
     .name {
-        font-size: 20px;
+        width: 50px;
+        height: 40px;
     }
     .navigation {
-        gap: 10px;
+        gap: 12px;
     }
     .navigation div {
-        font-size: 14px;
+        font-size: 13px;
     }
     
+}
+
+@media (max-width: 480px) {
+    .root {
+        max-width: 480px;
+    }
+    .container {
+        max-width: 80%;
+    }
+    .name {
+        width: 50px;
+    }
+    .navigation {
+        gap: 9px;
+    }
+    .navigation div {
+        font-size: 10px;
+    }
+    
+}
+
+@media screen and (max-width: 380px) {
+    .root {
+        max-width: 320px;
+    }
+    .container {
+        max-width: 80%;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    .navigation {
+        gap: 9px;
+    }
+    .navigation div {
+        font-size: 10px;
+    }
+    .name img{
+        width: 50px;
+        height: 29px;
+
+    }
 }
