--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,1 +1,22 @@
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    background-color: white;
+    box-shadow:0 4px 15px rgba(0, 0, 0, 0.15); 
+}
+
+.mainContent {
+    padding-top: 80px; 
+    width: 100%;
+    z-index: 1;
+}
+
+section {
+    scroll-margin-top: 80px;
+}
+
+
 
