--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -75,7 +75,7 @@
 .title {
     font-size: 1.5rem;
     font-weight: 600;
-    color: #2d3748;
+    color: var(--header-color);
     margin: 0.5rem 0;
 }
 
