--- a/src/Components/Resume/Resume.module.css
+++ b/src/Components/Resume/Resume.module.css
@@ -35,6 +35,7 @@
 .resumeDownload h2 {
     font-size: 2rem;
     font-weight: 540;
+    color: var(--header-color);
 }
 
 .resumeDownload a {
@@ -83,20 +84,22 @@
 .resume h3 {
     font-size: 1.5rem;
     font-weight: 540;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
 }
 
 .skillsList {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 10px;
+    gap: 5.5rem;
 }
 
 .skill {
     display: flex;
     align-items: center;
-    gap: 10px;
+    justify-content: space-between;
+    font-weight: 540;
+    font-size: 16px;
 }
 
 .date {
